--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,7 @@
             min-height: 100vh;
             background: #202124;
             color: white;
+            overflow: hidden;
         }
         #root {
             width: 100%;
