--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,18 +31,34 @@
             border-radius: 10px;
             background: #303134;
             box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+            position: relative;
+            width: 90vw;
+            max-width: 1280px;
+            aspect-ratio: 16/9;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         canvas {
             border-radius: 8px;
-            margin: 20px 0;
+            margin: 0;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             background: #ffffff;
+            width: calc(100% - 40px);
+            height: calc(100% - 100px);
+            border: 2px solid #8ab4f8;
         }
         .score {
+            position: absolute;
+            top: 20px;
+            right: 40px;
             font-size: 28px;
             font-weight: bold;
             color: #8ab4f8;
-            margin: 10px 0;
+            padding: 10px 20px;
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            border: 1px solid rgba(138, 180, 248, 0.3);
         }
         .controls {
             margin: 20px 0;
@@ -51,9 +67,9 @@
             border-radius: 8px;
         }
         h1 {
+            margin: 0 0 10px 0;
             color: #8ab4f8;
             font-size: 32px;
-            margin-bottom: 20px;
         }
         .game-over {
             position: absolute;
@@ -344,8 +360,8 @@
                             <div className="score">Score: {score}</div>
                             <canvas 
                                 ref={canvasRef} 
-                                width={400} 
-                                height={400}
+                                width={720}
+                                height={405}
                             />
                             <div className="controls">
                                 <p>Use arrow keys to control the snake</p>
