--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,8 +23,10 @@
         }
         #root {
             width: 100%;
-            max-width: 800px;
-            text-align: center;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .game-container {
             padding: 20px;
@@ -32,12 +34,12 @@
             background: #303134;
             box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
             position: relative;
-            width: 90vw;
-            max-width: 1280px;
+            width: min(90vw, calc(90vh * 16/9));
             aspect-ratio: 16/9;
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-bottom: 2vh;
         }
         canvas {
             border-radius: 8px;
@@ -45,8 +47,9 @@
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             background: #ffffff;
             width: calc(100% - 40px);
-            height: calc(100% - 100px);
+            height: calc(100% - 120px);
             border: 2px solid #8ab4f8;
+            margin-bottom: 20px;
         }
         .score {
             position: absolute;
@@ -61,10 +64,19 @@
             border: 1px solid rgba(138, 180, 248, 0.3);
         }
         .controls {
-            margin: 20px 0;
-            padding: 15px;
+            margin: 0;
+            padding: 10px;
             background: rgba(255, 255, 255, 0.05);
             border-radius: 8px;
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: auto;
+        }
+        .controls p {
+            margin: 0;
+            font-size: 14px;
         }
         h1 {
             margin: 0 0 10px 0;
