--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
             background: #303134;
             box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
             position: relative;
-            width: min(80vh, 90vw);
+            width: min(95vh * 1.8, 95vw);
             aspect-ratio: 1.8;
             display: flex;
             flex-direction: column;
@@ -46,10 +46,10 @@
             margin: 0;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             background: #ffffff;
-            width: calc(100% - 40px);
-            height: calc(100% - 120px);
+            width: calc(100% - 20px);
+            height: calc(100% - 100px);
             border: 2px solid #8ab4f8;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         .score {
             position: absolute;
